Добавлена работа с очередями RabbitMQ в pinger и backend
